# factorio-data-extractor

./: .gitignore  ChangeLog.md  README.md  factorio-data-extractor.cabal  notes.md  package.yaml  sanity_check.py  stack.yaml
app/: Main.hs
lua/: defines.lua
src/: FactorioData.hs  FactorioLua.hs  Main.hs
