cabal-version: 1.12


name:           factorio-data-extractor
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/githubuser/factorio-data-extractor#readme>
homepage:       https://github.com/johnsonwj/factorio-data-extractor#readme
bug-reports:    https://github.com/johnsonwj/factorio-data-extractor/issues
author:         William Johnson
maintainer:     example@example.com
copyright:      2018 William Johnson
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/johnsonwj/factorio-data-extractor

executable factorio-data-extractor-exe
  main-is: Main.hs
  other-modules:
      Paths_factorio_data_extractor
      FactorioLua
      FactorioData
      -- FactorioData.Raw
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , bytestring
    , filepath
    , hslua
    , containers
    , aeson
    , aeson-pretty
    , text
    , unordered-containers
    , vector
  default-language: Haskell2010
  default-extensions: OverloadedStrings
